--- a/templates/glosario.html
+++ b/templates/glosario.html
@@ -11,7 +11,7 @@
     <ul class= "space-y-4">
         {% for term in glosario["Glosario"] %}
         <li class= "bg-white shadow-md rounded-lg p-4">
-            <strong class="text-lg font-semibold">{{ term["Termino"] }}</strong> - {{ term["traduccion"] }}<br>
+            <strong class="text-lg font-semibold text-gray-600">{{ term["Termino"] }}:</strong> <span class="text-lg text-gray-600"> {{term["traduccion"] }}</span><br>
             <em class="text-gray-600">{{ term["Contexto"] }}</em>
         </li>
 {% endfor %}
