--- a/templates/index.html
+++ b/templates/index.html
@@ -2,14 +2,14 @@
 
 {% block title %}Panel de Control{% endblock %}
 
+{% block extra_css %}
+{% set extra_css = 'calendar' %}
+{% endblock %}
+
 {% block content %}
 <div class="container mx-auto px-4 py-8">
     <div class="bg-white rounded-lg shadow p-6">
         <div id="calendar"></div>
     </div>
 </div>
-{% endblock %}
-
-{% block scripts %}
-<script src="{{ url_for('static', filename='js/script-calendar.js') }}"></script>
 {% endblock %}
