--- a/templates/index.html
+++ b/templates/index.html
@@ -3,13 +3,13 @@
 {% block title %}Panel de Control{% endblock %}
 
 {% block extra_css %}
-{% set extra_css = 'calendar' %}
+    <link href="{{ url_for('static', filename='css/calendar.css') }}" rel="stylesheet">
 {% endblock %}
 
 {% block content %}
 <div class="container mx-auto px-4 py-8">
     <div class="bg-white rounded-lg shadow p-6">
-        <div id="calendar"></div>
+        <div id="calendar" class="w-full"></div>
     </div>
 </div>
 {% endblock %}
