--- a/templates/scripts_detail.html
+++ b/templates/scripts_detail.html
@@ -1,8 +1,15 @@
 {% extends "base.html" %}
 
-{% block title %} {scrip.title} {% endblock %}
+{% block title %}{{ title }}{% endblock %}
+
+{% block extra_css %}
+{% set extra_css = 'markdown' %}
+{% endblock %}
 
 {% block content %}
-<h1>{{ title }}</h1>
-<div>{{ content|safe }}</div>
+<div class="container mx-auto max-w-6xl px-4 py-8">
+    <div class="markdown-body">
+        {{ content|safe }}
+    </div>
+</div>
 {% endblock %}
